# Verbodus

./: .gitignore  README.md  package-lock.json  package.json
.github/workflows/: release.yml
src/: App.vue  index.css  main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: Comparison.vue  ConfigPanel.vue  ModalDialog.vue  Sidebar.vue  SpeedChart.vue  Speedometer.vue
src/store/: chartTheme.js  dialog.js  metrics.js  secrets.js  store.js  theme.js
